--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "jade": "~1.6.0",
+    "socket.io": "*"
+    
   },
    "devDependencies": {
-    "mocha": "*"
+    "mocha": "*",
+     "supertest" : "0.4.0"
   }
 
 }
